fixed menu-collapsed

--- a/assets/style_main.css
+++ b/assets/style_main.css
@@ -158,7 +158,7 @@ body{
   transition: all .25s;
   position: fixed;
   top: 10px;
-  left: 9px;
+  left: 95%;
   height: 36px;
   width: 36px;
   z-index: 100;
